<resources>
    <string name="app_name">MovieGalleriaPart-2</string>

    <string name="api_key">e8ee808272e37253ce9bcafad5189dd0</string>
    <string name="movie_image">Movie Image</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="review_link">Click on this link to read Movie Review</string>
    <string name="bookmark">Bookmark</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="most_popular">Popular Movie</string>
    <string name="top_rated">Top Rated Movie</string>
    <string name="show_favourite">Show Favourite Movie</string>
    <string name="remove_from_favourite">Un-Favourite</string>
    <string name="favourites_movie">Favourite Movies</string>
    <string name="no_internet">No Internet connection</string>
    <string name="title_of_favourite_movie">Title of the Movie</string>
    <string name="overview_of_favourite_movie">OverView of the Movie</string>
</resources>
