<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bookmark"
        android:orderInCategory="100"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_bookmark_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_back"
        android:orderInCategory="101"
        android:title="@string/action_back"
        android:icon="@drawable/ic_keyboard_arrow_left_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_forward"
        android:orderInCategory="102"
        android:title="@string/action_forward"
        android:icon="@drawable/ic_keyboard_arrow_right_white_24dp"
        app:showAsAction="always"/>
</menu>