<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:scrollbarFadeDuration="0"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/detail_activity_margin"
    android:gravity="top|center">

    <TextView
        android:id="@+id/movie_favourite_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourite"
        android:textSize="@dimen/favourite_text_size"
        android:layout_marginBottom="@dimen/favourite_bottom_margin"
        android:drawableRight="@drawable/ic_favourite"
        android:drawableEnd="@drawable/ic_favourite"/>

    <ImageView
        android:contentDescription="@string/movie_image"
        android:id="@+id/movie_picture_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/movie_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        tools:text="@tools:sample/lorem"/>

    <TextView
        android:id="@+id/release_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        tools:text="@tools:sample/date/mmddyy" />

    <RatingBar
        android:id="@+id/movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="10"
        android:stepSize="1.0"/>

    <TextView
        android:id="@+id/movie_overview_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem/random"
        android:textSize="@dimen/overview_size"/>

    <TextView
        android:id="@+id/movie_trailer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/lorem"/>

    <TextView
        android:id="@+id/movie_review_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_link"
        android:autoLink="all"
        android:textSize="@dimen/favourite_text_size"
        android:textAppearance="?android:titleTextAppearance"
        android:gravity="center"
        android:clickable="true"
        tools:text="@tools:sample/lorem"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/video_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_container"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/favourite_bottom_margin"
        android:src="@android:drawable/star_big_on"/>
    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>